# haskellTests

./: CHANGELOG.md  LICENSE  haskellTests.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: haskellTests-0.1.0.0-inplace.conf  package.cache
src/: Bowling.hs  FizzBuzz.hs
test/: BowlingTests.hs  FizzBuzzTests.hs
