cabal-version:      3.0
name:               haskellTests
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             EduardoR10
maintainer:         unirodri10@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    hs-source-dirs: src
    exposed-modules: Bowling, FizzBuzz
    build-depends: base ^>=4.17.2.1
    default-language: Haskell2010

test-suite test-bowling
  type: exitcode-stdio-1.0
  import: warnings
  main-is: BowlingTests.hs  
  hs-source-dirs: test      
  build-depends: 
      base >= 4.7 && < 5,
      tasty,
      tasty-hunit,           
      haskellTests,          
      HUnit,
      QuickCheck                  
  default-language: Haskell2010


test-suite test-fizzbuzz
    type: exitcode-stdio-1.0
    import: warnings
    main-is: FizzBuzzTests.hs 
    hs-source-dirs: test       
    build-depends: 
        base, 
        tasty, 
        tasty-hunit, 
        haskellTests
    default-language: Haskell2010
